# ProjectBlazt

./: .editorconfig  CMakeLists.txt  compile.sh  game.bak.c  game.c
cmake/: FindAllegro.cmake
image/raw/: man.xcf
src/: background.c  background.h  display.h  entity.c  entity.h  game.c  game.h  input.h  level.h  level1.c  level1.h  level2.c  level2.h  main.c  menu.c  menu.h  npc.h  player.c  player.h  red_dude.c  red_dude.h  state.h  underground_1.c  underground_1.h  util.c  util.h
src/editor/: Gemfile  house.tmx  level1.tmx  mklevel.rb
